[package]
name = "mill-mcts"
version = "0.1.0"
authors = ["Jannik Becker <jannikb@posteo.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.10.0"
smartstring = "1.0.1"
once_cell = "1.17.1"
nanorand = "0.7.0"
mill-playfield = { path = "../mill-playfield" }
#oorandom = "11.1.3"

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin" # might be preferable
#lto = true # = fat lto, seems to decrease performance?!
codegen-units = 1 # disable codegen unit parallelization to higher the optimization potential
panic = "abort" # disables catch or unwind panics, reduces binary size & might increase performance slightly
strip = true